Add custom split bindings (| and -)

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,6 +25,10 @@ set-option -g history-limit 5000
 unbind %
 unbind '"'
 
+# Custom split bindings
+bind | split-window -h
+bind - split-window -v
+
 # Vim-style pane navigation with prefix
 bind-key h select-pane -L
 bind-key j select-pane -D
